# Generic-Trace-Generator

./: AUTHORS  COPYING  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  README  ROADMAP  configure.ac  gtg.pc.in  release_notes
doc/: Doxyfile  Doxyfile.in  Makefile.am
doc/userMan/: Makefile  licence.tex  project.tex  use.tex  userMan.tex
extlib/otf/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  VERSION  aclocal.m4  config.h.in  configure  configure.in
extlib/otf/config/: otf_get_version.sh
extlib/otf/config/m4/: acinclude.mpi.m4  libtool.m4
extlib/otf/docu/: Makefile.in
extlib/otf/otflib/: Makefile.in  OTF_CopyHandler.c  OTF_CopyHandler.h  OTF_CopyHandler_stream.c  OTF_CopyHandler_stream.h  OTF_Definitions.h  OTF_Errno.c  OTF_File.c  OTF_FileManager.c  OTF_Filenames.c  OTF_Handler.h  OTF_HandlerArray.c  OTF_HandlerArray.h  OTF_KeyValue.c  OTF_KeyValue.h  OTF_Keywords.h  OTF_MasterControl.c  OTF_Parse.c  OTF_Platform_win.h  OTF_RBuffer.c  OTF_RStream.c  OTF_Reader.c  OTF_Version.h  OTF_WBuffer.c  OTF_WBuffer.h  OTF_WStream.c  OTF_WStream.h  OTF_Writer.c  OTF_Writer.h  OTF_inttypes_unix.h.in  OTF_inttypes_win.h
extlib/otf/otflib_py/: Makefile.in  pyOTF_Wrapper.h
extlib/otf/tests/otf_read_from_buffer/: Makefile  otf_read_from_buffer.c
extlib/otf/tools/: Makefile.am  Makefile.in
extlib/otf/tools/otf2vtf/: Makefile.in  otf2vtf.c
extlib/otf/tools/otfaux/: Control.cpp  Handler.cpp  Handler.h  Makefile.in  State.cpp  State.h  otfaux.cpp
extlib/otf/tools/otfcompress/: Makefile.in  otfcompress.c
extlib/otf/tools/otfconfig/: Makefile.in  otfconfig.c
extlib/otf/tools/otfdump/: Handler.cpp  Handler.h  Makefile.in  otfdump.cpp
extlib/otf/tools/otfinfo/: Makefile.in  otfinfo.c
extlib/otf/tools/otfmerge/: Makefile.am  Makefile.in  handler.c  handler.h  otfmerge.c
extlib/otf/tools/otfmerge-mpi/: Makefile.am  Makefile.in  handler.c  handler.h
extlib/otf/tools/otfprofile/: Makefile.in  otfprofile.cpp
extlib/otf/tools/otfshrink/: Handler.cpp  Makefile.in  otfshrink.cpp
extlib/otf/tools/vtf2otf/: Makefile.in  vtf2otf.c
extlib/otf2/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
extlib/otf2/build-backend/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
extlib/otf2/build-config/: REVISION
extlib/otf2/build-frontend/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
extlib/otf2/build-includes/: backend-only.am  common.am  front-and-backend.am  frontend-only.am
extlib/otf2/doc/doxygen-dev/: doxygen-dev.cfg.in
extlib/otf2/doc/doxygen-user/: A1_installation.dox  definitions.dox  doxygen-user-component.cfg.in  events.dox  main_1.dox.in  main_2.dox.in  main_3.dox.in  main_4.dox.in  main_5.dox.in  otf2_config_usage.dox.in  otf2_print_usage.dox.in  snaps.dox
extlib/otf2/doc/tags/: otf2.tag
extlib/otf2/include/otf2/: Makefile.inc.am  OTF2_Archive.h  OTF2_AttributeList.h  OTF2_Callbacks.h  OTF2_DefReader.h  OTF2_DefReaderCallbacks.h  OTF2_DefWriter.h  OTF2_Definitions.h  OTF2_ErrorCodes.h  OTF2_Events.h  OTF2_EvtReader.h  OTF2_EvtReaderCallbacks.h  OTF2_EvtWriter.h  OTF2_GeneralDefinitions.h  OTF2_GlobalDefReader.h  OTF2_GlobalDefReaderCallbacks.h  OTF2_GlobalDefWriter.h  OTF2_GlobalEvtReader.h  (+14 more)
extlib/otf2/share/: Makefile.inc.am
extlib/otf2/src/: Makefile.inc.am  OTF2_AnchorFile.c  OTF2_AnchorFile.h  OTF2_Archive.c  OTF2_AttributeList.c  OTF2_Buffer.c  OTF2_Buffer.h  OTF2_Compression_Zlib.c  OTF2_Compression_Zlib.h  OTF2_DefReader.c  OTF2_DefReader_inc.c  OTF2_DefWriter.c  OTF2_DefWriter_inc.c  OTF2_EvtReader.c  OTF2_EvtReader_inc.c  OTF2_EvtWriter.c  OTF2_EvtWriter_inc.c  OTF2_File.c  OTF2_File.h  OTF2_File_None.c  OTF2_File_Posix.c  OTF2_File_Sion.c  OTF2_GlobalDefReader.c  OTF2_GlobalDefReader_inc.c  OTF2_GlobalDefWriter.c  OTF2_GlobalDefWriter_inc.c  OTF2_GlobalEvtReader.c  OTF2_GlobalEvtReader_inc.c  OTF2_GlobalSnapReader.c  OTF2_GlobalSnapReader_inc.c  OTF2_IdMap.c  OTF2_MarkerReader.c  OTF2_MarkerWriter.c  OTF2_Reader.c  OTF2_SnapReader.c  OTF2_SnapReader_inc.c  OTF2_SnapWriter.c  OTF2_SnapWriter_inc.c  OTF2_Thumbnail.c  config-backend.h.in  (+32 more)
extlib/otf2/templates/: Makefile.inc.am  Makefile.inc.tmpl.am  OTF2_AttributeList.tmpl.h  OTF2_AttributeList.tmpl.h.sig  OTF2_DefReaderCallbacks.tmpl.h  OTF2_DefReaderCallbacks.tmpl.h.sig  OTF2_DefReader_inc.tmpl.c  OTF2_DefReader_inc.tmpl.c.sig  OTF2_DefWriter.tmpl.h  OTF2_DefWriter.tmpl.h.sig  OTF2_DefWriter_inc.tmpl.c  OTF2_DefWriter_inc.tmpl.c.sig  OTF2_Definitions.tmpl.h  OTF2_Definitions.tmpl.h.sig  OTF2_Events.tmpl.h  OTF2_Events.tmpl.h.sig  OTF2_EvtReaderCallbacks.tmpl.h  OTF2_EvtReaderCallbacks.tmpl.h.sig  OTF2_EvtReader_inc.tmpl.c  OTF2_EvtReader_inc.tmpl.c.sig  OTF2_EvtWriter.tmpl.h  OTF2_EvtWriter.tmpl.h.sig  OTF2_EvtWriter_inc.tmpl.c  OTF2_EvtWriter_inc.tmpl.c.sig  OTF2_GeneralDefinitions.tmpl.h  OTF2_GeneralDefinitions.tmpl.h.sig  OTF2_GlobalDefReaderCallbacks.tmpl.h  OTF2_GlobalDefReaderCallbacks.tmpl.h.sig  OTF2_GlobalDefReader_inc.tmpl.c  OTF2_GlobalDefReader_inc.tmpl.c.sig  OTF2_GlobalDefWriter.tmpl.h  OTF2_GlobalDefWriter.tmpl.h.sig  OTF2_GlobalDefWriter_inc.tmpl.c  OTF2_GlobalDefWriter_inc.tmpl.c.sig  OTF2_GlobalEvtReaderCallbacks.tmpl.h  OTF2_GlobalEvtReaderCallbacks.tmpl.h.sig  OTF2_GlobalEvtReader_inc.tmpl.c  OTF2_GlobalEvtReader_inc.tmpl.c.sig  OTF2_GlobalSnapReaderCallbacks.tmpl.h  OTF2_GlobalSnapReaderCallbacks.tmpl.h.sig  (+44 more)
inc/: GTG.h  GTGBasic.h  GTGBasic1.h  GTGColor.h  GTGCompress.h  GTGList.h  GTGMemory.h  GTGOTF.h  GTGOTF_Basic.h  GTGOTF_Structs.h  GTGPaje.h  GTGPaje_Basic.h  GTGPaje_Color.h  GTGReplay.h  GTGStack.h  GTGTypes.h  Makefile.am  OTF_GTGBasic1.h  OTF_Structs.h  gtg_list.h  gtg_otf2.h  gtg_otf2_id.h  gtg_otf2_macros.h  gtg_otf2_string.h  gtg_otf2_structs.h  gtg_stack.h  pajeColor.h  paje_GTGBasic1.h  types.h
src/: Makefile.am
src/C/: GTGBasic1_c.c  GTGColor.c  GTGMemory.c  GTGReplay.c  OTF_GTGBasic1_c.c  gtg_compress.c  gtg_compress_core.c  gtg_decompress.c  gtg_otf2.c  interfaceCFortranBasic1.c  paje_GTGBasic1_c.c  paje_header.c
src/FORTRAN/: GTGBasic1_f.f  GTGBasic1_f.f90
(+128 files in other folders)
