SUBDIRS = extlib/ inc/ src/ doc/

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = gtg.pc

EXTRA_DIST = exm/gtg_color.c      \
	     exm/Makefile         \
	     exm/otf_example.c    \
	     exm/paje_example2.c  \
             exm/paje_example.c   \
	     exm/paje_example.F90 \
	     exm/vite_example.c
