# Copyright © CNRS, INRIA, Université Bordeaux 1
# See COPYING in top-level directory.

include_HEADERS = GTG.h \
		  GTGBasic1.h \
		  GTGColor.h \
		  GTGReplay.h \
		  GTGMemory.h \
		  OTF_GTGBasic1.h \
		  pajeColor.h \
		  paje_GTGBasic1.h \
		  types.h \
		  OTF_Structs.h \
		  gtg_list.h \
		  gtg_stack.h \
		  gtg_compress.h
