# Copyright © CNRS, INRIA, Université Bordeaux 1
# See COPYING in top-level directory.

include_HEADERS = GTG.h \
		  GTGBasic.h \
		  GTGColor.h \
		  GTGReplay.h \
		  GTGMemory.h \
		  GTGOTF.h \
		  GTGOTF_Basic.h \
		  GTGOTF_Structs.h \
		  GTGPaje.h \
		  GTGPaje_Basic.h \
		  GTGTypes.h \
		  GTGList.h \
		  GTGStack.h \
		  GTGCompress.h
